--- a/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
+++ b/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
@@ -2068,7 +2068,6 @@
                     <ContentControl x:Name="ModelMobilityMovementSection" 
                                    Content="{Binding ViewModel.MoversView}" 
                                    ContentTemplate="{StaticResource ModelMobilityMovementSectionTemplate}"/>
-                    <Separator x:Name="ModelMobilityMovementSeparator" Margin="0,10,0,5" Visibility="Collapsed"/>
                 </StackPanel>
         </ScrollViewer>
         </Grid>
@@ -2161,13 +2160,13 @@
                                      Unchecked="SectionFilter_Unchecked"
                                      Tag="SoundSection"/>
                             
-                            <CheckBox x:Name="ModelMobilityMovementSectionCheckBox" 
-                                     Content="Model / Mobility / Movement" 
+                            <CheckBox x:Name="ModelMotionsSectionCheckBox" 
+                                     Content="Model &amp; Motions" 
                                      Style="{StaticResource FilterCheckBoxStyle}"
                                      IsChecked="True"
                                      Checked="SectionFilter_Checked"
                                      Unchecked="SectionFilter_Unchecked"
-                                     Tag="ModelMobilityMovementSection"/>
+                                     Tag="ModelMotionsSection"/>
                             
                             <Separator x:Name="SectionSeparator"
                                      Margin="0,10,0,10" 
@@ -2248,11 +2247,15 @@
                                 </StackPanel>
                             </Expander>
                             
-                            <!-- Stats Fields -->
                             <Expander Header="Stats Fields" 
                                      Margin="0,0,0,5"
                                      IsExpanded="False">
                                 <StackPanel x:Name="StatsFieldsPanel">
+                                    <!-- Base Stats -->
+                                    <TextBlock Text="Base Stats" 
+                                             FontWeight="SemiBold" 
+                                             Margin="5,5,0,5"/>
+                                    
                                     <CheckBox x:Name="STRFieldCheckBox" 
                                              Content="STR" 
                                              Style="{StaticResource FilterCheckBoxStyle}"
@@ -2285,6 +2288,67 @@
                                              Unchecked="FieldFilter_Unchecked"
                                              Tag="INTField"/>
                                     
+                                    <!-- Misc Stats -->
+                                    <TextBlock Text="Misc Stats" 
+                                             FontWeight="SemiBold" 
+                                             Margin="5,10,0,5"/>
+                                    
+                                    <CheckBox x:Name="HPFieldCheckBox" 
+                                             Content="HP" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="HPField"/>
+                                    
+                                    <CheckBox x:Name="ArmorFieldCheckBox" 
+                                             Content="Armor" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="ArmorField"/>
+                                    
+                                    <CheckBox x:Name="MagicResistanceFieldCheckBox" 
+                                             Content="Magic Resistance" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="MagicResistanceField"/>
+                                    
+                                    <CheckBox x:Name="ATKMinFieldCheckBox" 
+                                             Content="ATK Min" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="ATKMinField"/>
+                                    
+                                    <CheckBox x:Name="ATKMaxFieldCheckBox" 
+                                             Content="ATK Max" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="ATKMaxField"/>
+                                    
+                                    <CheckBox x:Name="ATKDelayFieldCheckBox" 
+                                             Content="ATK Delay" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="ATKDelayField"/>
+                                    
+                                    <CheckBox x:Name="SpeedFieldCheckBox" 
+                                             Content="Speed" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="SpeedField"/>
+                                    
                                     <CheckBox x:Name="HitRateFieldCheckBox" 
                                              Content="Hit Rate" 
                                              Style="{StaticResource FilterCheckBoxStyle}"
@@ -2300,6 +2364,67 @@
                                              Checked="FieldFilter_Checked"
                                              Unchecked="FieldFilter_Unchecked"
                                              Tag="EvasionRateField"/>
+                                    
+                                    <!-- Elementary -->
+                                    <TextBlock Text="Elementary" 
+                                             FontWeight="SemiBold" 
+                                             Margin="5,10,0,5"/>
+                                    
+                                    <CheckBox x:Name="ElementFieldCheckBox" 
+                                             Content="Element" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="ElementField"/>
+                                    
+                                    <CheckBox x:Name="RatioFieldCheckBox" 
+                                             Content="Ratio" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="RatioField"/>
+                                    
+                                    <CheckBox x:Name="WaterResistanceFieldCheckBox" 
+                                             Content="Water Resistance" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="WaterResistanceField"/>
+                                    
+                                    <CheckBox x:Name="FireResistanceFieldCheckBox" 
+                                             Content="Fire Resistance" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="FireResistanceField"/>
+                                    
+                                    <CheckBox x:Name="WindResistanceFieldCheckBox" 
+                                             Content="Wind Resistance" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="WindResistanceField"/>
+                                    
+                                    <CheckBox x:Name="EarthResistanceFieldCheckBox" 
+                                             Content="Earth Resistance" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="EarthResistanceField"/>
+                                    
+                                    <CheckBox x:Name="ElectricityResistanceFieldCheckBox" 
+                                             Content="Electricity Resistance" 
+                                             Style="{StaticResource FilterCheckBoxStyle}"
+                                             IsChecked="True"
+                                             Checked="FieldFilter_Checked"
+                                             Unchecked="FieldFilter_Unchecked"
+                                             Tag="ElectricityResistanceField"/>
                                 </StackPanel>
                             </Expander>
                             
@@ -2339,7 +2464,7 @@
                                              Unchecked="FieldFilter_Unchecked"
                                              Tag="ActionRadiusField"/>
                                     
-                                    <CheckBox x:Name="ATKMinFieldCheckBox" 
+                                    <CheckBox x:Name="CombatATKMinFieldCheckBox" 
                                              Content="Attack min." 
                                              Style="{StaticResource FilterCheckBoxStyle}"
                                              IsChecked="True"
@@ -2347,7 +2472,7 @@
                                              Unchecked="FieldFilter_Unchecked"
                                              Tag="ATKMinField"/>
                                     
-                                    <CheckBox x:Name="ATKMaxFieldCheckBox" 
+                                    <CheckBox x:Name="CombatATKMaxFieldCheckBox" 
                                              Content="Attack max." 
                                              Style="{StaticResource FilterCheckBoxStyle}"
                                              IsChecked="True"
@@ -2387,7 +2512,7 @@
                                              Unchecked="FieldFilter_Unchecked"
                                              Tag="AttackSpeedField"/>
                                     
-                                    <CheckBox x:Name="ATKDelayFieldCheckBox" 
+                                    <CheckBox x:Name="CombatATKDelayFieldCheckBox" 
                                              Content="Attack Delay" 
                                              Style="{StaticResource FilterCheckBoxStyle}"
                                              IsChecked="True"
@@ -2395,7 +2520,7 @@
                                              Unchecked="FieldFilter_Unchecked"
                                              Tag="ATKDelayField"/>
                                     
-                                    <CheckBox x:Name="HPFieldCheckBox" 
+                                    <CheckBox x:Name="CombatHPFieldCheckBox" 
                                              Content="Health Points" 
                                              Style="{StaticResource FilterCheckBoxStyle}"
                                              IsChecked="True"
