Mover motion list fixed height

--- a/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
+++ b/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
@@ -1337,6 +1337,7 @@
                                     <ListView
                                               x:Name="MotionsListView"
                                               Style="{StaticResource AppListViewStyle}"
+                                              Height="200"
                                               ItemContainerStyle="{StaticResource AppListViewItemStyle}"
                                               ItemsSource="{Binding ViewModel.MoversView.CurrentItem.Model.Motions}">
                                         <ListView.ItemTemplate>
