--- a/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
+++ b/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
@@ -263,6 +263,8 @@
                     </Grid>
 
                     <!-- Penya -->
+                    <!-- Defined in items -->
+                    <!--
                     <Grid Style="{StaticResource FormFieldStyle}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -285,8 +287,11 @@
                                 Maximum="2147483647"
                                 SpinButtonPlacementMode="Inline"/>
                     </Grid>
+                    -->
 
                     <!-- Duration -->
+                    <!-- Defined in items -->
+                    <!--
                     <Grid Style="{StaticResource FormFieldStyle}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -309,6 +314,7 @@
                                 Maximum="999999"
                                 SpinButtonPlacementMode="Inline"/>
                     </Grid>
+                    -->
 
                     <!-- EXP Value -->
                     <Grid Style="{StaticResource FormFieldStyle}">
@@ -328,7 +334,7 @@
                             </ui:SymbolIcon>
                         </StackPanel>
                         <ui:NumberBox Grid.Row="1"
-                                Value="{Binding Prop.NExpValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}"
+                                Value="{Binding Prop.NExpValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                 Minimum="0"
                                 Maximum="999999999"
                                 SpinButtonPlacementMode="Inline"/>
@@ -457,7 +463,7 @@
                             </ui:SymbolIcon>
                         </StackPanel>
                         <ui:NumberBox Grid.Row="1"
-                                Value="{Binding HitRate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}"
+                                Value="{Binding Prop.DwHR, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}"
                                 Minimum="0"
                                 Maximum="100"
                                 SpinButtonPlacementMode="Inline"/>
@@ -481,7 +487,7 @@
                             </ui:SymbolIcon>
                         </StackPanel>
                         <ui:NumberBox Grid.Row="1"
-                                Value="{Binding EvasionRate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}"
+                                Value="{Binding Prop.DwER, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}"
                                 Minimum="0"
                                 Maximum="100"
                                 SpinButtonPlacementMode="Inline"/>
@@ -538,7 +544,7 @@
                             </ui:SymbolIcon>
                         </StackPanel>
                         <ui:NumberBox Grid.Row="1"
-                                Value="{Binding Prop.DwAddHp, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}"
+                                Value="{Binding Prop.DwAddHp, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                 Minimum="1"
                                 Maximum="2147483647"
                                 SpinButtonPlacementMode="Inline"/>
@@ -619,6 +625,8 @@
                     </Grid>
 
                     <!-- Action Radius -->
+                    <!-- Not used by FlyFF -->
+                    <!--
                     <Grid Style="{StaticResource FormFieldStyle}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -641,6 +649,7 @@
                                 Maximum="1000"
                                 SpinButtonPlacementMode="Inline"/>
                     </Grid>
+                    -->
 
                     <!-- Attack min. -->
                     <Grid Style="{StaticResource FormFieldStyle}">
@@ -660,7 +669,7 @@
                             </ui:SymbolIcon>
                         </StackPanel>
                         <ui:NumberBox Grid.Row="1"
-                                Value="{Binding Prop.DwAtkMin, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}"
+                                Value="{Binding Prop.DwAtkMin, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                 Minimum="0"
                                 Maximum="2147483647"
                                 SpinButtonPlacementMode="Inline"/>
@@ -684,7 +693,7 @@
                             </ui:SymbolIcon>
                         </StackPanel>
                         <ui:NumberBox Grid.Row="1"
-                                Value="{Binding Prop.DwAtkMax, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}"
+                                Value="{Binding Prop.DwAtkMax, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                 Minimum="0"
                                 Maximum="2147483647"
                                 SpinButtonPlacementMode="Inline"/>
@@ -757,6 +766,8 @@
                     </Grid>
 
                     <!-- Attack Speed -->
+                    <!-- Not used by FlyFF -->
+                    <!--
                     <Grid Style="{StaticResource FormFieldStyle}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -779,6 +790,7 @@
                                 Maximum="100"
                                 SpinButtonPlacementMode="Inline"/>
                     </Grid>
+                    -->
 
                     <!-- Attack Delay -->
                     <Grid Style="{StaticResource FormFieldStyle}">
@@ -838,6 +850,8 @@
                     </Grid>
 
                     <!-- Abrasion -->
+                    <!-- Not used by FlyFF -->
+                    <!--
                     <Grid Style="{StaticResource FormFieldStyle}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -860,8 +874,11 @@
                                 Maximum="100"
                                 SpinButtonPlacementMode="Inline"/>
                     </Grid>
+                    -->
 
                     <!-- Hardness -->
+                    <!-- Not used by FlyFF -->
+                    <!--
                     <Grid Style="{StaticResource FormFieldStyle}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -884,6 +901,7 @@
                                 Maximum="100"
                                 SpinButtonPlacementMode="Inline"/>
                     </Grid>
+                    -->
 
                     <!-- Magic Resistance -->
                     <Grid Style="{StaticResource FormFieldStyle}">
@@ -1057,17 +1075,43 @@
                         </StackPanel>
                         <ComboBox Grid.Row="1"
                                 Style="{StaticResource AppComboBoxStyle}"
-                                SelectedValue="{Binding Prop.EElementType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                            <ComboBoxItem Content="None"/>
-                            <ComboBoxItem Content="Fire"/>
-                            <ComboBoxItem Content="Water"/>
-                            <ComboBoxItem Content="Earth"/>
-                            <ComboBoxItem Content="Wind"/>
-                            <ComboBoxItem Content="Electricity"/>
+                                SelectedValue="{Binding Prop.EElementType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                SelectedValuePath="Tag">
+                            <ComboBoxItem Content="None">
+                                <ComboBoxItem.Tag>
+                                    <sys:Int32>0</sys:Int32>
+                                </ComboBoxItem.Tag>
+                            </ComboBoxItem>
+                            <ComboBoxItem Content="Fire">
+                                <ComboBoxItem.Tag>
+                                    <sys:Int32>1</sys:Int32>
+                                </ComboBoxItem.Tag>
+                            </ComboBoxItem>
+                            <ComboBoxItem Content="Water">
+                                <ComboBoxItem.Tag>
+                                    <sys:Int32>2</sys:Int32>
+                                </ComboBoxItem.Tag>
+                            </ComboBoxItem>
+                            <ComboBoxItem Content="Electricity">
+                                <ComboBoxItem.Tag>
+                                    <sys:Int32>3</sys:Int32>
+                                </ComboBoxItem.Tag>
+                            </ComboBoxItem>
+                            <ComboBoxItem Content="Wind">
+                                <ComboBoxItem.Tag>
+                                    <sys:Int32>4</sys:Int32>
+                                </ComboBoxItem.Tag>
+                            </ComboBoxItem>
+                            <ComboBoxItem Content="Earth">
+                                <ComboBoxItem.Tag>
+                                    <sys:Int32>5</sys:Int32>
+                                </ComboBoxItem.Tag>
+                            </ComboBoxItem>
                         </ComboBox>
                     </Grid>
 
                     <!-- Element Attack -->
+                    <!-- TODO: probably change this to "Element ratio" or something like it -->
                     <Grid Style="{StaticResource FormFieldStyle}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -1085,13 +1129,14 @@
                             </ui:SymbolIcon>
                         </StackPanel>
                         <ui:NumberBox Grid.Row="1"
-                                Value="{Binding Prop.WElementAtk, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}"
+                                Value="{Binding Prop.WElementAtk, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                 Minimum="0"
                                 Maximum="2147483647"
                                 SpinButtonPlacementMode="Inline"/>
                     </Grid>
 
                     <!-- Correction Value -->
+                    <!-- TODO: probably remove it as I don't know what bind it should be -->
                     <Grid Style="{StaticResource FormFieldStyle}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -1437,7 +1482,7 @@
                     
                     <!-- Model & Motions Section -->
                     <StackPanel>
-                        <TextBlock Text="Model / Mobility / Movement"
+                        <TextBlock Text="Model"
                                 Style="{StaticResource SectionHeaderStyle}"/>
                         
                         <!-- Preview and Motions Container -->
@@ -1541,7 +1586,7 @@
                                     </Grid.ColumnDefinitions>
                                     <TextBox Grid.Column="0"
                                             Style="{StaticResource AppTextBoxStyle}"
-                                            Text="{Binding Model.SzName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                                            Text="{Binding ViewModel.MoversView.CurrentItem.Model.SzName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                     <ui:Button Grid.Column="1" 
                                              Content="..." 
                                              Width="30"
@@ -1550,7 +1595,8 @@
                             </Grid>
 
                             <!-- Identifier -->
-                            <Grid Style="{StaticResource FormFieldStyle}">
+                            <!-- Model identifier is identical to mover identifier, we don't need that -->
+                            <!-- <Grid Style="{StaticResource FormFieldStyle}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="Auto"/>
@@ -1567,8 +1613,11 @@
                                         Style="{StaticResource AppTextBoxStyle}"
                                         Text="{Binding ModelIdentifier, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                             </Grid>
+                            -->
 
                             <!-- Reference -->
+                            <!-- TODO: It should be implemented somewhere else -->
+                            <!--
                             <Grid Style="{StaticResource FormFieldStyle}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
@@ -1592,6 +1641,7 @@
                                     <ComboBoxItem Content="MMI_ITEM"/>
                                 </ComboBox>
                             </Grid>
+                            -->
 
                             <!-- Scale -->
                             <Grid Style="{StaticResource FormFieldStyle}">
@@ -1608,13 +1658,15 @@
                                     </ui:SymbolIcon>
                                 </StackPanel>
                                 <ui:NumberBox Grid.Row="1"
-                                        Value="{Binding Model.FScale, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}"
+                                        Value="{Binding ViewModel.MoversView.CurrentItem.Model.FScale, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                         Minimum="0.1"
                                         Maximum="10"
                                         SpinButtonPlacementMode="Inline"/>
                             </Grid>
 
                             <!-- Speed -->
+                            <!-- TODO: Maybe add it in another category-->
+                            <!-- 
                             <Grid Style="{StaticResource FormFieldStyle}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
@@ -1634,8 +1686,11 @@
                                         Maximum="100"
                                         SpinButtonPlacementMode="Inline"/>
                             </Grid>
+                            -->
 
                             <!-- Flying -->
+                            <!-- TODO: Maybe add it in another category-->
+                            <!-- 
                             <Grid Style="{StaticResource FormFieldStyle}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
@@ -1656,27 +1711,33 @@
                                     <ComboBoxItem Content="Yes"/>
                                 </ComboBox>
                             </Grid>
+                            -->
 
-                            <!-- Additional Textures -->
+                            <!-- Additional Texture -->
                             <Grid Style="{StaticResource FormFieldStyle}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
                                 <StackPanel Grid.Row="0" Orientation="Horizontal">
-                                    <TextBlock Text="Additional Textures" Style="{StaticResource FieldLabelStyle}"/>
+                                    <TextBlock Text="Additional Texture" Style="{StaticResource FieldLabelStyle}"/>
                                     <ui:SymbolIcon Symbol="Info20" Style="{StaticResource InfoIconStyle}">
                                         <ui:SymbolIcon.ToolTip>
-                                            <ToolTip Content="Additional texture files"/>
+                                            <ToolTip Content="Additional texture"/>
                                         </ui:SymbolIcon.ToolTip>
                                     </ui:SymbolIcon>
                                 </StackPanel>
-                                <TextBox Grid.Row="1"
-                                        Style="{StaticResource AppTextBoxStyle}"
-                                        Text="{Binding AdditionalTextures, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                                <ComboBox Grid.Row="1"
+                                        Style="{StaticResource AppComboBoxStyle}"
+                                        ItemsSource="{Binding ViewModel.AdditionalTexturePossibilities}"
+                                        DisplayMemberPath="Key"
+                                        SelectedValuePath="Key"
+                                        SelectedValue="{Binding ViewModel.MoversView.CurrentItem.Model.NTextureEx, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                             </Grid>
 
                             <!-- Jump Height -->
+                            <!-- DwJumpIng is not used in Flyff system -->
+                            <!--
                             <Grid Style="{StaticResource FormFieldStyle}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
@@ -1696,8 +1757,11 @@
                                         Maximum="1000"
                                         SpinButtonPlacementMode="Inline"/>
                             </Grid>
+                            -->
                             
                             <!-- Air Jump -->
+                            <!-- DwAirJump is not used in Flyff system -->
+                            <!--
                             <Grid Style="{StaticResource FormFieldStyle}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
@@ -1718,8 +1782,11 @@
                                     <ComboBoxItem Content="Yes"/>
                                 </ComboBox>
                             </Grid>
+                            -->
 
                             <!-- Fly Level -->
+                            <!-- Does not exists -->
+                            <!--
                             <Grid Style="{StaticResource FormFieldStyle}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
@@ -1739,6 +1806,7 @@
                                         Maximum="1000"
                                         SpinButtonPlacementMode="Inline"/>
                             </Grid>
+                            -->
                         </UniformGrid>
                     </StackPanel>
                 </StackPanel>
