Display IDs by strings in lists

--- a/eTools Ultimate/Views/Pages/Accessory/AccessoryPage.xaml
+++ b/eTools Ultimate/Views/Pages/Accessory/AccessoryPage.xaml
@@ -167,7 +167,7 @@
                                     <TextBlock Text="{Binding Item.Name}"
                                                FontWeight="SemiBold"
                                                Foreground="{DynamicResource TextFillColorPrimaryBrush}"/>
-                                    <TextBlock Text="{Binding Item.Id}"
+                                    <TextBlock Text="{Binding Item.Identifier}"
                                                Foreground="{DynamicResource TextFillColorSecondaryBrush}"
                                                FontSize="12"/>
                                 </StackPanel>
