--- a/eTools Ultimate/Views/Pages/Item/ItemPage.xaml
+++ b/eTools Ultimate/Views/Pages/Item/ItemPage.xaml
@@ -1556,7 +1556,7 @@
                     <TextBlock Text="{Binding Name}"
                             FontWeight="SemiBold"
                             Foreground="{DynamicResource TextFillColorPrimaryBrush}"/>
-                    <TextBlock Text="{Binding Id}"
+                    <TextBlock Text="{Binding Identifier}"
                             Foreground="{DynamicResource TextFillColorSecondaryBrush}"
                             FontSize="12"/>
                 </StackPanel>
