--- a/eTools Ultimate/Views/Pages/SkillPage.xaml
+++ b/eTools Ultimate/Views/Pages/SkillPage.xaml
@@ -447,7 +447,7 @@
                     <TextBlock Text="{Binding Name}"
                             FontWeight="SemiBold"
                             Foreground="{DynamicResource TextFillColorPrimaryBrush}"/>
-                    <TextBlock Text="{Binding Prop.DwId}"
+                    <TextBlock Text="{Binding Identifier}"
                             Foreground="{DynamicResource TextFillColorSecondaryBrush}"
                             FontSize="12"/>
                 </StackPanel>
